--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,21 @@
 {
+  "name": "FarhadMohammadi/PHPSimpleFramework",
+  "description": "The Simple PHP Framework.",
+  "keywords": [
+    "simple-framework",
+    "farhad-mohammadi"
+  ],
+  "license": "MIT",
+  "type": "project",
   "autoload": {
+    "files": [
+      "app/Core/helpers.php"
+    ],
     "psr-4": {
       "App\\": "app/"
     }
   },
   "require": {
+    "nesbot/carbon": "^1.22"
   }
 }
